ja/15.4/admin/storage-guide.rst
========
ストレージ
========

概要
====

ストレージページでは、Amazon S3、Google Cloud Storage、S3互換ストレージ（MinIO等）のファイル管理ができます。

管理方法
======

オブジェクトストレージサーバーの設定
---------------------------

[システム > 全般]からストレージの設定を開き、使用するストレージタイプに応じて以下の項目を設定します。

共通設定
~~~~~~

- タイプ: ストレージタイプ（自動/S3/GCS）
- バケット: 管理するバケット名

S3の設定
~~~~~~

- エンドポイント: S3エンドポイント（空欄でAWSデフォルト）
- アクセスキー: AWSアクセスキー
- シークレットキー: AWSシークレットキー
- リージョン: AWSリージョン

GCSの設定
~~~~~~~

- エンドポイント: GCSエンドポイント（空欄でGoogle Cloudデフォルト）
- プロジェクトID: Google CloudプロジェクトID
- 認証情報パス: サービスアカウント認証情報JSONファイルパス

MinIO（S3互換）の設定
~~~~~~~~~~~~~~~~~~

- エンドポイント: MinIOサーバのエンドポイントURL
- アクセスキー: MinIOアクセスキー
- シークレットキー: MinIOシークレットキー


表示方法
------

下図のオブジェクト一覧ページを開くには、左メニューの [システム > ストレージ] をクリックします。

|image0|


名前
::::

オブジェクトのファイル名


サイズ
:::::

オブジェクトのサイズ


最終更新日時
:::::::::

オブジェクトの最終更新日時

ダウンロード
---------

ダウンロードボタンをクリックすることで、オブジェクトをダウンロードすることができます。


削除
----

削除ボタンをクリックすることで、オブジェクトを削除することができます。


アップロード
---------

右上のファイルアップロードボタンをクリックして、ファイルのアップロードウィンドウを開くことができます。


フォルダーの作成
------------

パス表示の右にあるフォルダー作成ボタンをクリックすることで、フォルダー作成ウィンドウを開くことができます。空のフォルダーは作成できないことに注意してください。


.. |image0| image:: ../../../resources/images/ja/15.4/admin/storage-1.png
